--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<header class="site-header-wrap" data-lead-id="header">
 		<div class="site-header">
 			<img src="img/logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
+			<a href=""><div class="login-button">Login</div></a>
 		</div>
 	</header>
 	<section class="conversion-banner-wrap" daFta-lead-id="conversion-banner-wrap">
@@ -29,7 +30,11 @@
 					<p>This ultimate guide contains all of the obvious and not-so-obvious best practices of web design. Think of this guide as your key to creating a website with any skillset.</p>
 					<p>This book has been compiled for many years and is finally available at the special price of only!</p>
 				</div>
-				<a href="#/optin" class="cta-btn conversion-banner__cta-btn" data-lead-id="conversion-banner-cta-btn">CLICK HERE TO BUY NOW</a>
+
+				<a class="typeform-share cta-btn conversion-banner__cta-btn" href="https://shu10.typeform.com/to/OUaNmu" data-mode="1" target="_blank">CLICK HERE TO BUY NOW</a>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
+				<!-- <a href="#/optin" class="cta-btn conversion-banner__cta-btn" data-lead-id="conversion-banner-cta-btn">CLICK HERE TO BUY NOW</a> -->
 				<div class="credit-cards-wrap conversion-banner__credit-cards-wrap">
 					<ul class="credit-cards cf" data-lead-id="conversion-banner-credit-cards">
 						<li data-lead-id="credit-card-visa"><img src="img/visa.png" alt="VISA credit card" class="credit-card" /></li>
@@ -49,7 +54,7 @@
 				<div class="media__body media--vc">
 					<h2 class="content-block__title">The Problem with Self-Learning</h2>
 					<div class="content-block__body">
-						<p>Self-learning is hard. Students are challenged to sift through dozens of sites that promise to teach them how to code. While the resources are out there, the content is fragmented.</p>
+						<p>Self-learning is difficult. Students are challenged to sift through dozens of sites that promise to teach them how to code. While the resources are out there, the content is fragmented.</p>
 
 						<p>Students waste time and energy attempting to assemble their own curriculum, often ending up with an incomplete understanding of the programming language as well as underdeveloped skills in debugging and engineering workflow.</p>
 
@@ -75,8 +80,8 @@
 
 	<section class="features-wrap" data-lead-id="features-wrap">
 		<div class="features">
-			<h2 class="features__title" data-lead-id="features-title">WHAT THIS BOOK HAS TO OFFER</h2>
-			<p class="features__sub-title" data-lead-id="features-sub-title"><em>Web Design Best Practices</em> contains everything you could want to know about creating a website from scratch, from design to implementation.</p>
+			<h2 class="features__title" data-lead-id="features-title">WHAT THIS PROGRAM HAS TO OFFER</h2>
+			<p class="features__sub-title" data-lead-id="features-sub-title"><em>Fulcrum</em> is the most comprehensive self-learning curriculum on JavaScript development, containing over 100 hours of material.</p>
 			<ul class="feature-list" data-lead-id="feature-list">
 				<li class="feature media" data-lead-id="feature-1">
 					<img src="img/icon-palette-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-1" />
@@ -126,8 +131,8 @@
 
 	<section class="testimonials-wrap" data-lead-id="testimonials-wrap">
 		<div class="testimonials">
-			<p class="testimonials__quote" data-lead-id="testimonials-quote">“This book helped me create not only a beautiful and functional website but also one that actively engages users on a regular basis.”</p>
-			<p class="testimonials__attribution" data-lead-id="testimonials-attribution"><strong>Joe Weber</strong> - Digital Solutions</p>
+			<p class="testimonials__quote" data-lead-id="testimonials-quote">“Before Fulcrum, I was enrolled in the Udacity Frontend Nanodegree program. The difference has been that Fulcrum is solid knowledge. Before I knew how to make something work, but Fulcrum taught me why it works.”</p>
+			<p class="testimonials__attribution" data-lead-id="testimonials-attribution"><strong>Suya Xu</strong> - Fulcrum student</p>
 		</div>
 	</section>
 
