--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header class="site-header-wrap" data-lead-id="header">
 		<div class="site-header">
 			<img src="img/logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
-			<a href=""><div class="login-button">Login</div></a>
+			<a href="/login"><div class="login-button">Login</div></a>
 		</div>
 	</header>
 	<section class="conversion-banner-wrap" daFta-lead-id="conversion-banner-wrap">
@@ -138,42 +138,27 @@
 
 	<section class="author-bio-wrap" data-lead-id="author-bio-wrap">
 		<div class="author-bio media">
-			<div class="author-bio__video-embed-wrap media__img--rev media--vc" data-lead-id="author-bio-video-embed-wrap">
-				<div class="author-bio__video-embed" data-lead-id="author-bio-video-embed">
-					<img src="img/video-placeholder.png" alt="" />
-				</div>
-			</div>
-			<div class="media__body">
+			<div class="media__body guarantee">
 				<div class="media">
-					<img src="img/author-photo.png" alt="" class="author-bio__photo media__img media--vc" data-lead-id="author-bio-photo" />
 					<div class="media__body media--vc">
-						<h2 class="author-bio__title" data-lead-id="author-bio-title">A Word From The Author</h2>
-						<p class="author-bio__body" data-lead-id="author-bio-body">“I love the web. I love thinking of <strong>digital strategies</strong> and measuring my website’s <strong>performance</strong>. I want to share my love and passion with the world. That’s what this book is about. This book will teach website best practices to <strong>any skillset</strong>.”</p>
-						<a href="#/optin" class="cta-btn author-bio__cta-btn" data-lead-id="author-bio-cta-btn">CLICK HERE TO BUY NOW</a>
+						<h2 class="author-bio__title" data-lead-id="author-bio-title">Tuition Credit and Guarantee</h2>
+						<p class="author-bio__body" data-lead-id="author-bio-body">Hack Reactor Fulcrum costs only $2,980 and is fully refundable within the first 7 days if you decide the program isn't right for you. If you are accepted into one of our 12-week, immersive programs after completing Hack Reactor Fulcrum in its entirety, this cost will be deducted from your overall tuition.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="newsletter-cta-wrap" data-lead-id="newsletter-cta-wrap">
-		<div class="newsletter-cta">
-			<a href="#/optin" class="cta-btn newsletter-cta__cta-btn" data-lead-id="newsletter-cta-cta-btn">SIGN UP FOR THE <em>BEST PRACTICES</em> NEWSLETTER</a>
-			<p class="newsletter-cta__body" data-lead-id="newsletter-cta-body">Sign up for the <em>Best Practices</em> newsletter to stay up-to-date on the latest web technologies and trends.</p>
-		</div>
-	</section>
-
 	<section class="footer-cta-wrap" data-lead-id="footer-cta-wrap">
 		<div class="footer-cta">
-			<h2 class="footer-cta__title" data-lead-id="footer-cta-title">WHY WAIT? BUY NOW!</h2>
-			<p class="footer-cta__body" data-lead-id="footer-cta-body">Why put off taking your website to the next level? You can buy Web Design Best Practices right now for only . The book comes with a 100% guarantee of your satisfaction.</p>
-			<img src="img/book.png" alt="" class="footer-cta__hero-img" data-lead-id="footer-cta-hero-img" />
-			<div class="footer-cta__prices" data-lead-id="footer-cta-prices">
-				<p class="prices__original" data-lead-id="prices-original">$72.00</p>
-				<p class="prices__buy-now" data-lead-id="prices-buy-now">$49.00</p>
-				<p class="prices__disclaimer" data-lead-id="prices-disclaimer">if you buy now.</p>
-			</div>
-			<a href="#/optin" class="cta-btn footer-cta__cta-btn" data-lead-id="footer-cta-btn">CLICK HERE TO BUY NOW</a>
+			<h2 class="footer-cta__title" data-lead-id="footer-cta-title">SO WHAT ARE YOU WAITING FOR?</h2>
+			<p class="footer-cta__body" data-lead-id="footer-cta-body">Education is the best tool to elevate your life. Fulcrum provides you that leverage.</p>
+			<!-- <div class="footer-cta__prices" data-lead-id="footer-cta-prices"> -->
+				<!-- <p class="prices__original" data-lead-id="prices-original">$72.00</p> -->
+				<!-- <p class="prices__buy-now" data-lead-id="prices-buy-now">$2980</p> -->
+				<!-- <p class="prices__disclaimer" data-lead-id="prices-disclaimer">if you buy now.</p> -->
+			<!-- </div> -->
+			<a href="#/optin" class="cta-btn footer-cta__cta-btn" data-lead-id="footer-cta-btn">BUY FULCRUM NOW FOR $2980</a>
 			<div class="credit-cards-wrap">
 				<ul class="credit-cards footer-cta__credit-cards cf" data-lead-id="footer-cta-credit-cards">
 					<li data-lead-id="footer-credit-card-visa"><img src="img/visa.png" alt="VISA credit card" class="credit-card" /></li>
@@ -185,10 +170,10 @@
 		</div>
 	</section>
 
-	<footer class="site-footer-wrap" data-lead-id="footer-wrap">
+<!-- 	<footer class="site-footer-wrap" data-lead-id="footer-wrap">
 		<div class="site-footer">
 			<p class="site-footer__fineprint" data-lead-id="fineprint">Copyright @2015. <a href="#">Legal Information</a></p>
 		</div>
-	</footer>
+	</footer> -->
 </body>
 </html>
