--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Fulcrum</title>
 	<link rel="stylesheet" href="css/normalize.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
@@ -42,20 +42,22 @@
 <body>
 	<header class="site-header-wrap" data-lead-id="header">
 		<div class="site-header">
-			<img src="img/logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
+			<img src="img/Fulcrum_logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
 			<a href="/login"><div class="login-button">Login</div></a>
 		</div>
 	</header>
 	<section class="conversion-banner-wrap" daFta-lead-id="conversion-banner-wrap">
 		<div class="conversion-banner media">
-			<img src="img/book.png" alt="" class="conversion-banner__hero-img media__img media--vc" data-lead-id="conversion-banner-hero-img" />
+			<div class="conversion-banner__hero-img media__img media--vc">
+				<img src="img/code.png">
+			</div>
 			<div class="media__body">
 				<h1 class="conversion-banner__title" data-lead-id="conversion-banner-title">HACK REACTOR FULCRUM</h1>
-				<p class="conversion-banner__by-line" data-lead-id="conversion-banner-by-line">Fast track preparation for coding school</p>
+				<p class="conversion-banner__by-line" data-lead-id="conversion-banner-by-line"><em>Fast track preparation for coding school</em></p>
 				<div class="conversion-banner__body" data-lead-id="conversion-banner-body">
-					<p>Fulcrum is the most efficient way to prepare for an immersive coding bootcamp such as Hack Reactor.</p>
-					<p>This ultimate guide contains all of the obvious and not-so-obvious best practices of web design. Think of this guide as your key to creating a website with any skillset.</p>
-					<p>This book has been compiled for many years and is finally available at the special price of only!</p>
+					<p>Fulcrum is the most efficient way to prepare for an immersive coding school such as Hack Reactor.</p>
+					<p>Comprehensive curriculum with over 100 hours of materials.</p>
+					<p>Enroll in a Hack Reactor Core school and apply your Fulcrum payment towards your tuition.</p>
 				</div>
 
 				<a class="typeform-share cta-btn conversion-banner__cta-btn" href="https://shu10.typeform.com/to/OUaNmu" data-mode="1" target="_blank">CLICK HERE TO BUY NOW</a>
@@ -110,7 +112,7 @@
 			<p class="features__sub-title" data-lead-id="features-sub-title"><em>Fulcrum</em> is the most comprehensive self-learning curriculum on JavaScript development, containing over 100 hours of material.</p>
 			<ul class="feature-list" data-lead-id="feature-list">
 				<li class="feature media" data-lead-id="feature-1">
-					<img src="img/icon-palette-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-1" />
+					<img src="img/icon-wrenches-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-1" />
 					<div class="media__body">
 						<h3 class="feature__title" data-lead-id="feature-title-1">JAVASCRIPT FOUNDATIONS</h3>
 						<p class="feature__body" data-lead-id="feature-body-1">Twenty-two comprehensive lessons on JavaScript, covering everything from "Objects and Properties" to "Misconceptions of `this`"</p>
@@ -145,7 +147,7 @@
 					</div>
 				</li>
 				<li class="feature media" data-lead-id="feature-6">
-					<img src="img/icon-wrenches-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-6" />
+					<img src="img/icon-palette-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-6" />
 					<div class="media__body">
 						<h3 class="feature__title" data-lead-id="feature-title-6">CODING SCHOOL TRANSITION</h3>
 						<p class="feature__body" data-lead-id="feature-body-6">Streamlined admissions process to transition into full-time immersive Hack Reactor Core programs</p>
