--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<header class="site-header-wrap" data-lead-id="header">
 		<div class="site-header">
-			<img src="img/Fulcrum_logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
+			<img src="img/fulcrum_logo.png" alt="" class="site-header__logo" data-lead-id="site-header-logo" />
 			<a href="/login"><div class="login-button">Login</div></a>
 		</div>
 	</header>
