--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Fulcrum</title>
 	<link rel="stylesheet" href="css/normalize.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="image/png" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/html5shiv.js"></script>
 	<script src="js/jquery-1.9.1.min.js"></script>
@@ -97,7 +98,7 @@
 				<div class="media__body media--vc">
 					<h2 class="content-block__title">Curriculum Based on Solid Fundamentals</h2>
 					<div class="content-block__body">
-						<p>Fulcrum is a carefully designed to help students construct a robust mental model of how programming languages work, and a set of debugging processes to isolate problems when code doesn’t work.</p>
+						<p>Fulcrum is carefully designed to help students construct a robust mental model of how programming languages work, and a set of debugging processes to isolate problems when code doesn’t work.</p>
 
 						<p>The Fulcrum curriculum has evolved from many years of working with talented students like you. Not only have the concepts been scrutinized for accuracy and preciseness, the order in which they’re presented has been meticulously arranged to steadily build upon and reinforce the previous learnings.</p>
 					</div>
@@ -109,7 +110,7 @@
 	<section class="features-wrap" data-lead-id="features-wrap">
 		<div class="features">
 			<h2 class="features__title" data-lead-id="features-title">WHAT THIS PROGRAM HAS TO OFFER</h2>
-			<p class="features__sub-title" data-lead-id="features-sub-title"><em>Fulcrum</em> is the most comprehensive self-learning curriculum on JavaScript development, containing over 100 hours of material.</p>
+			<p class="features__sub-title" data-lead-id="features-sub-title">Fulcrum is the most comprehensive self-learning curriculum on JavaScript development, containing over 100 hours of material.</p>
 			<ul class="feature-list" data-lead-id="feature-list">
 				<li class="feature media" data-lead-id="feature-1">
 					<img src="img/icon-wrenches-dark.png" alt="" class="feature-icon media__img" data-lead-id="feature-icon-1" />
