--- a/index.html
+++ b/index.html
@@ -13,32 +13,13 @@
 	<script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/functions.js"></script>
 	<script type="text/javascript">
-    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var n=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(n?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(a,o);for(var r=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["clearEventProperties","identify","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=r(p[c])};
-    heap.load("3207912030");
-    function ajax(url, callback, data, x) {
-      try {
-        x = new(this.XMLHttpRequest || ActiveXObject)('MSXML2.XMLHTTP.3.0');
-        x.open(data ? 'POST' : 'GET', url, 1);
-        x.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
-        x.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-        x.onreadystatechange = function () {
-          x.readyState > 3 && callback && callback(x.responseText, x);
-        };
-        x.send(data)
-      } catch (e) {
-        window.console && console.log(e);
-      }
-    };
-    ajax('/profile', function(data) {
-      try {
-        data = JSON.parse(data)
-        data.domain = window.location.host
-        heap.identify(data)
-      } catch (e) {
-        data = ''
-      }
-    })
-  </script>
+	!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.1.0";
+	analytics.load("hLwGk1Y1IYK7KzzVwljDU6xd88s1GHtw");
+	analytics.page()
+	}}();
+	</script>
+	<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
+	</script>
 </head>
 <body>
 	<header class="site-header-wrap" data-lead-id="header">
@@ -62,7 +43,6 @@
 				</div>
 
 				<a class="typeform-share cta-btn conversion-banner__cta-btn" href="https://shu10.typeform.com/to/OUaNmu" data-mode="1" target="_blank">CLICK HERE TO BUY NOW</a>
-<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
 				<div class="credit-cards-wrap conversion-banner__credit-cards-wrap">
 					<ul class="credit-cards cf" data-lead-id="conversion-banner-credit-cards">
